alterando a relação entre o player e seus seguidores, e tambem a criação do model Follow